<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nolan</string>

    <string name="notification_channel_notice">Notice</string>
    <string name="notification_channel_save">Save</string>

    <string name="onboarding_button_skip">Skip</string>
    <string name="onboarding_button_next">Next</string>
    <string name="onboarding_button_allow">Allow</string>
    <string name="onboarding_page1_desc">Welcome to Nolan!\nI\'ll turn your photos into works of art.</string>
    <string name="onboarding_page2_desc">All processing is offline.\nPersonal information is not used.</string>
    <string name="onboarding_page3_desc">To take and save pictures,\nplease allow permissions.</string>

    <string name="filter_editor">Filter Editor</string>
    <string name="filter_editor_desc">An image that previews the filter effect.\nYou can also apply it to the picture you want.</string>
    <string name="filter_editor_notice">Please select one below.</string>
    <string name="filter_editor_button_done">Done</string>
    <string name="filter_editor_option_default">Use default image</string>
    <string name="filter_editor_option_camera">Take a picture</string>
    <string name="filter_editor_option_gallery">Choose from gallery</string>

    <string name="permission">Permission</string>
    <string name="permission_desc">When importing or saving photos, \'storage\' permission is required. And please grant \'camera\' permission if want to take a photo.</string>
    <string name="permission_item_storage">Storage</string>
    <string name="permission_item_camera">Camera</string>
    <string name="permission_required">Required</string>
    <string name="permission_error_message">Permissions are not granted.</string>

    <string name="camera_error_permission">Camera permission is not granted.</string>
    <string name="camera_filter_description">Select a filter and go back</string>
    <string name="camera_allow_usage">Use camera</string>

    <string name="photo_picker">Select an image</string>
    <string name="photo_picker_menu_select_outside">Select from outside</string>

    <string name="photo_edit_loading_hint">Filter is being applied.\nPlease wait.🐢</string>
    <string name="photo_edit_error_unknown">Unknown error has occurred. 👾</string>

    <string name="share">Share</string>
    <string name="share_target_instagram">Instagram</string>
    <string name="share_target_instagram_story">Instagram\nStory</string>
    <string name="share_target_facebook">Facebook</string>
    <string name="share_target_facebook_story">Facebook\nStory</string>
    <string name="share_target_line">Line</string>
    <string name="share_target_twitter">Twitter</string>
    <string name="share_target_kakaotalk">KakaoTalk</string>
    <string name="share_target_whatsapp">WhatsApp</string>
    <string name="share_target_more">More</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_item_appearance">Appearance</string>
    <string name="settings_item_appearance_system">Use device theme</string>
    <string name="settings_item_appearance_light">Light theme</string>
    <string name="settings_item_appearance_dark">Dark theme</string>
    <string name="settings_category_camera">Camera</string>
    <string name="settings_item_watermark">Watermark</string>
    <string name="settings_item_filter_editor">Change camera filter</string>
    <string name="settings_category_etc">Etc</string>
    <string name="settings_item_review">Write a review</string>
    <string name="settings_item_bug_report">Report or Contact</string>
    <string name="settings_item_version">App Version</string>
    <string name="settings_item_version_latest">%s / Latest</string>
    <string name="settings_item_version_update">%s / Update</string>
    <string name="settings_item_remove_ads">Remove AD</string>
    <string name="settings_item_remove_ads_purchased">Purchased</string>
    <string name="email_subject">Report or contact (Nolan ver. %s)</string>
    <string name="toast_activity_not_found">Can\'t find the app to launch.</string>
    <string name="toast_already_no_ads_purchased">This item has already been purchased.\nThank you very much.❤️️</string>
</resources>
