<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    tools:background="?colorSurface"
    tools:context=".ui.camera.filter.editor.FilterEditorOptionDialogFragment">

    <TextView
        android:id="@+id/default_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/filter_editor_option_default"
        android:textColor="?android:textColorPrimary"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/camera_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/filter_editor_option_camera"
        android:textColor="?android:textColorPrimary"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/album_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/filter_editor_option_gallery"
        android:textColor="?android:textColorPrimary"
        android:textSize="17sp" />

</LinearLayout>
