<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="?colorSurface"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_up"
        app:title="@string/settings" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.2"
        android:background="?colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="28dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp"
            android:text="@string/settings_category_general"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:textColorSecondary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appearance_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:drawableStart="@drawable/ic_appearance"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/settings_item_appearance"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_appearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/settings_item_appearance_system" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha="0.2"
            android:background="?colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="28dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp"
            android:text="@string/settings_category_camera"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:textColorSecondary" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/watermark_switch"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground"
            android:checked="true"
            android:drawableStart="@drawable/ic_watermark"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/settings_item_watermark"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter_editor_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:drawableStart="@drawable/ic_photo_filter"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/settings_item_filter_editor"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <soup.nolan.ui.widget.CircularImageView
                android:id="@+id/current_filter_image"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="24dp"
                android:background="@color/thumbnail"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha="0.2"
            android:background="?colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="28dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp"
            android:text="@string/settings_category_etc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/review_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/settings_item_review"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/bug_report_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_bug_report"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/settings_item_bug_report"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/version_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:drawableStart="@drawable/ic_version"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/settings_item_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1.0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/remove_ad_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:drawableStart="@drawable/ic_remove_ad"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/settings_item_remove_ads"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/remove_ad_purchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/settings_item_remove_ads_purchased"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorSecondary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_ad_unit_banner_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
