<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="?colorSurface"
    tools:context=".ui.permission.PermissionFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/permission" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.2"
        android:background="?colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/positive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:lineSpacingExtra="7dp"
            android:text="@string/permission_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/storage_switch"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:drawableStart="@drawable/ic_save"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/permission_item_storage"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/permission_required"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/camera_switch"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?selectableItemBackground"
            android:checked="true"
            android:drawableStart="@drawable/ic_photo_camera"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/permission_item_camera"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    </LinearLayout>

    <TextView
        android:id="@+id/positive_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/positive_button_bg"
        android:gravity="center"
        android:text="@string/permission_button_positive"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
